--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rafalzych.github.task">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".GithubUsersApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.rafalzych.github.task.MainActivity">
+        <activity android:name="com.rafalzych.github.task.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
