--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,16 @@ subprojects {
                 }
             }
         }
+        if (project.hasProperty('kapt')) {
+            // Reference for 'kapt' DSL: https://kotlinlang.org/docs/reference/kapt.html#java-compiler-options
+            kapt {
+                // we expect this closure to run over a org.jetbrains.kotlin.gradle.plugin.KaptExtension
+                javacOptions {
+                    option("-source", "8")
+                    option("-target", "8")
+                }
+            }
+        }
     }
 }
 
